# stereo-vo

./: .gitignore  README.md
data/: .tf00RotR.transform  .tf00Rott.transform  Q.mat  images.list  pointclouds.list  tf00R.transform  tf00TrR.transform  tf00Trt.transform  tf00t.transform  tf01R.transform  tf01t.transform  tf11R.transform  tf11t.transform  tf12R.transform  tf12t.transform  tf22R.transform  tf22t.transform  tf23R.transform  tf23t.transform  tf33R.transform  tf33t.transform  tf34R.transform  tf34t.transform  tf44R.transform  tf44t.transform
data/1/: tf01R.transform  tf01t.transform  tf12R.transform  tf12t.transform  tf34R.transform
plots/: objFn_pair00.csv  objFn_pair00_trans.csv  pair00_RotObjFn.csv  pair00_dispObjFn.csv  pair00_dispX.csv
pointclouds/sparse/: pair00.pcd  pair01.pcd  pair02.pcd  pair03.pcd  pair04.pcd
pointclouds/transformed/: pair00_rot.pcd  pair00_trans.pcd  transformed.pcd
proposal/: proposal.tex
report/: report.aux  report.dvi  report.out  report.tex
scripts/: calculate-all-transforms.sh
settings/: Identity
src/: CMakeLists.txt  matrix-transform.cpp  pointcloud-stitching.cpp  pointset-matching-cpd.cpp  pointset-matching.cpp  stereo-pointcloud.cpp
